--- a/notebooks/ML/Linear_regression_advertisement.ipynb
+++ b/notebooks/ML/Linear_regression_advertisement.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,18 +362,20 @@
     }
    ],
    "source": [
-    "advert.head()\n",
     "import matplotlib.pyplot as plt\n",
+    "#Show correlation between columns  of advertisement database\n",
     "\n",
     "plt.matshow(advert.corr())\n",
     "plt.colorbar()\n",
     "plt.show()\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -400,17 +402,13 @@
        "array([ 0.04576465,  0.18853002, -0.00103749])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#https://scikit-learn.org/stable/modules/linear_model.html\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "from sklearn import linear_model\n",
     "reg = linear_model.LinearRegression()\n",
     "reg.fit(advert.iloc[:,0:3], advert[\"sales\"])\n",
@@ -429,28 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.0457642   0.18741937 -0.00076744]\n",
       "[ 0.0457642   0.18741937 -0.00076744]\n"
      ]
     }
    ],
    "source": [
-    "reg = linear_model.BayesianRidge()\n",
-    "reg.fit(advert.iloc[:,0:3], advert[\"sales\"])\n",
-    "print(reg.coef_)\n",
+    "# Try  another algorigthm, using the bayesian  setting\n",
+    "# https://en.wikipedia.org/wiki/Tikhonov_regularization\n",
+    "\n",
     "\n",
     "reg2 = linear_model.BayesianRidge(alpha_1=1e-06, alpha_2=1e-06, compute_score=False, copy_X=True,\n",
     "       fit_intercept=True, lambda_1=1e-06, lambda_2=1e-06, n_iter=300,\n",
     "       normalize=False, tol=0.001, verbose=False)\n",
     "reg2.fit(advert.iloc[:,0:3], advert[\"sales\"])\n",
-    "print(reg2.coef_)\n"
+    "print(reg2.coef_)\n",
+    "\n",
+    "#Ex: try to  implement error estimates for  the two different regressions\n"
    ]
   },
   {
