more  commented stuff

--- a/notebooks/ML/gaussian_process_co2.ipynb
+++ b/notebooks/ML/gaussian_process_co2.ipynb
@@ -126,10 +126,14 @@
     "    months = np.asarray(months).reshape(-1, 1)\n",
     "    avg_ppmvs = np.asarray(ppmv_sums) / counts\n",
     "    return months, avg_ppmvs\n",
+    "#If there are problem connecting with sklearn repos, just load  the offline  version in /data_ML folder...\n",
     "\n",
+    "# COMMENTED PART FOR DATA DOWNLOAD AND SAVING FOR OFFLINE USE\n",
+    "#X_full, y_full = load_mauna_loa_atmospheric_co2()\n",
+    "#np.savetxt('./data_ML/X_full.csv', X_full)\n",
+    "#np.savetxt(\"./data_ML/y_full.csv\", y_full)\n",
     "\n",
-    "X_full, y_full = load_mauna_loa_atmospheric_co2()\n",
-    "\n"
+    "X_full, y_full = np.loadtxt(\"./data_ML/X_full.csv\") ,  np.loadtxt(\"./data_ML/y_full.csv\")"
    ]
   },
   {
@@ -168,9 +172,10 @@
     "gp = GaussianProcessRegressor(kernel=kernel_gpml, alpha=0,\n",
     "                              optimizer=None, normalize_y=True)\n",
     "# No optimization in the fitting process\n",
-    "gp.fit(X, y)\n",
+    "gp.fit(X.reshape(len(X),1), y.reshape(len(y),1))\n",
     "\n",
-    "scoregp1 = sklearn.metrics.r2_score(y_test, gp.predict(X_test))\n",
+    "scoregp1 = sklearn.metrics.r2_score(y_test.reshape(len(y_test),1),\n",
+    "                                    gp.predict(X_test.reshape(len(X_test),1)))\n",
     "\n",
     "print(\"Score  GP before optimization is...\", scoregp1)\n",
     "print(\"GPML kernel: %s\" % gp.kernel_)\n",
@@ -215,10 +220,10 @@
     "#Now gp  has a  default  optimizer  embedded into it\n",
     "gp = GaussianProcessRegressor(kernel=kernel, alpha=0,\n",
     "                              normalize_y=True)\n",
-    "gp.fit(X, y)\n",
+    "gp.fit(X.reshape(len(X),1), y.reshape(len(y),1))\n",
     "\n",
     "# We compute r2 score by  using test and  train dataset \n",
-    "scoregp2 = sklearn.metrics.r2_score(y_test, gp.predict(X_test))\n",
+    "scoregp2 = sklearn.metrics.r2_score(y_test, gp.predict(X_test.reshape(len(X_test),1)))\n",
     "print(\"Score Optimized GP is ...\", scoregp2)\n",
     "print(\"\\nLearned kernel: %s\" % gp.kernel_)\n",
     "print(\"Log-marginal-likelihood  of optimized  kernel: %.3f\"\n",
@@ -255,7 +260,8 @@
     "reg = reg.fit(X, y)\n",
     "\n",
     "# Compute r2 score of linear regression\n",
-    "scorelin = sklearn.metrics.r2_score(y_test, reg.predict(X_test))\n",
+    "scorelin = sklearn.metrics.r2_score(y_test.reshape(len(y_test),1),\n",
+    "                                    reg.predict(X_test.reshape(len(X_test),1)))\n",
     "print(\"r2 score of Linear Regression is ...\", scorelin)\n",
     "\n",
     "\n"
